--- a/Converency/Converency.xcodeproj/xcshareddata/xcschemes/Converency.xcscheme
+++ b/Converency/Converency.xcodeproj/xcshareddata/xcschemes/Converency.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "5CB87CF0255CB54800620A30"
+               BuildableName = "ConverencyTests.xctest"
+               BlueprintName = "ConverencyTests"
+               ReferencedContainer = "container:Converency.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
